--- a/index.html
+++ b/index.html
@@ -218,5 +218,11 @@
             </footer>
         </div>
         <script src="assets/script.js"></script>
+        <!-- 备案号容器 -->
+<div id="icp-container">
+    <a href="https://beian.miit.gov.cn/" target="_blank">
+        蜀ICP备2025153554号
+    </a>
+</div>
     </body>
 </html>
